# foxvoid

./: .gitignore  pyproject.toml  readme.md
authentication/: admin.py  models.py  translation.py
authentication/migrations/: 0001_initial.py  0002_groupproxy_user_country_alter_user_avatar.py  0003_user_timezone.py
core/: constance_config.py  middleware.py  settings.py  urls.py
locale/fr/LC_MESSAGES/: django.po
public/: urls.py
static/css/: custom_constance_unfold.css
templates/: index.html  layout.html
theme/static_src/: package-lock.json
